@@ -1,4 +1,4 @@
 DIST libots-2.2.7-2.alpha.rpm 94336 RMD160 ac17689a543dcb5097c35229267f04fe5856bf42 SHA1 f266cfa5b837e14d3cac20659e55dedaa52e5dc5 SHA256 32e6e49d8bc4faf1b5c250cb764c124833947fa16c7f96ea6b23fb4d96030530
-EBUILD libots-2.2.7-r2.ebuild 714 RMD160 643560d6de26e4900bde6021c355be9b72438b05 SHA1 f9ca30fdbffc817b3ef2fdb41e07100e7a48a9e4 SHA256 87ede4342f0924e40ef7bbeb8c6e86bfc152a6c10b10477a4817c005ba0f2330
-MISC ChangeLog 1702 RMD160 f48a4ba32fef6636795df816810700c76ad9969c SHA1 05d051834611ab3b240fcc4334ecf92066d51bb2 SHA256 eac6a1676099890aa7c23549b5a4d4311e1f828c24b04f05b3d1c8fff8a58f41
-MISC metadata.xml 383 RMD160 bd7ac45c3d1f37d81679c265d2333a8b705f8a16 SHA1 da98a7db62897af544093e1fca03eb19846fd6f5 SHA256 8029554305ccd5d12a6c0018db3274c0c331e7b0d03a6b62fc61d4d49a8ea779
+EBUILD libots-2.2.7-r2.ebuild 708 RMD160 cf13f2252ccd6326e11520700280100d4cda95d4 SHA1 44fc8e5432ec66750972c2cf0cdcce9404a0659c SHA256 ce2bec8381265734a8b35e64bbdcecc50bd97f36e60d61ed858a780c8a132de2
+MISC ChangeLog 1848 RMD160 d40a76017cb3bccaeee64ff8e2ebe4e4a03c379a SHA1 ad69fd85b0714b1d352bcfc32723b6f73504cce1 SHA256 cd669a5d8a12363e4c155a8d551736bb7e190406f46b959de44d83bc49cfa807
+MISC metadata.xml 306 RMD160 f07c10e683be547c3c9fda737d93541742ad5bac SHA1 6438fe03952fbc55c5666119f7ce2ce2bbcfa1b1 SHA256 715ce9d501ba3e9be9569b2ba0eec436d51abb7d5425a950d9514fc05b8dae25
