@@ -1,6 +1,6 @@
-# Copyright 1999-2008 Gentoo Foundation
+# Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/libots/Attic/libots-2.2.7-r2.ebuild,v 1.7 2008/05/05 13:06:50 drac Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/libots/Attic/libots-2.2.7-r2.ebuild,v 1.8 2010/11/12 03:35:15 mattst88 Exp $
 
 inherit rpm toolchain-funcs
 
@@ -11,9 +11,10 @@ SRC_URI="ftp://ftp.compaq.com/pub/products/C-CXX/linux/libots-2.2.7-2.alpha.rpm"
 LICENSE="compaq-sdla"
 SLOT="0"
 KEYWORDS="-* alpha"
+IUSE=""
 RESTRICT="strip"
 
-DEPEND="app-arch/rpm2targz"
+DEPEND=""
 RDEPEND=""
 
 S=${WORKDIR}/usr/lib/compaq/libots-2.2.7
