@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/libots
-# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/libots/Attic/ChangeLog,v 1.16 2008/05/05 13:06:50 drac Exp $
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/libots/Attic/ChangeLog,v 1.17 2010/11/12 03:35:15 mattst88 Exp $
+
+  12 Nov 2010; <mattst88@gentoo.org> libots-2.2.7-r2.ebuild, metadata.xml:
+  Remove redundant dependency on rpm2targz. Assign to alpha herd.
 
   05 May 2008; Samuli Suominen <drac@gentoo.org> -libots-2.2.7.ebuild,
   -libots-2.2.7-r1.ebuild, libots-2.2.7-r2.ebuild:
